Updated: scope name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "broui",
+  "name": "@vladbndko/broui",
   "version": "0.0.3",
   "description": "Vue 3 components",
   "author": "Vladyslav Bondarenko <vladbndko@gmail.com>",
