--- a/package.json
+++ b/package.json
@@ -28,19 +28,28 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test:unit": "vitest",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.10.3",
     "@tabler/icons-vue": "^3.5.0",
     "@testing-library/vue": "^8.1.0",
-    "@types/node": "^20.13.0",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.5",
-    "clsx": "^2.1.1",
-    "happy-dom": "^14.12.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "jsdom": "^24.1.0",
     "prettier": "3.3.0",
+    "sass": "^1.77.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
     "vite-plugin-dts": "^3.9.1",
@@ -50,6 +59,9 @@
   },
   "peerDependencies": {
     "vue": "^3.0.0"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1"
   },
   "engines": {
     "node": ">=20.10.0",
