--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{ts,vue,css,json}]
+[*.{html,ts,vue,scss,json}]
 charset = utf-8
 indent_style = space
 indent_size = 2
