--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@vladbndko/broui",
+  "name": "@vladbndko/brovue",
   "version": "0.0.4",
   "description": "Vue 3 components",
   "author": "Vladyslav Bondarenko <vladbndko@gmail.com>",
   "license": "MIT",
-  "repository": "vladbndko/broui",
+  "repository": "vladbndko/brovue",
   "type": "module",
   "keywords": [
     "components",
@@ -16,16 +16,16 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/brovue.cjs",
+  "module": "./dist/brovue.js",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
+      "import": "./dist/brovue.js",
+      "require": "./dist/brovue.cjs"
     },
     "./dist/style.css": "./dist/style.css"
   },
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -33,6 +33,7 @@
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
+    "generate:types": "vue-tsc --declaration --emitDeclarationOnly --outdir ./dist",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
@@ -45,6 +46,8 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.5.1",
+    "defu": "^6.1.4",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
     "jsdom": "^24.1.0",
@@ -61,7 +64,8 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "theme-colors": "^0.1.0"
   },
   "engines": {
     "node": ">=20.10.0",
