--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "types": ["vitest/globals"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"],
+  "include": ["src/**/*.d.ts", "src/BroVue/**/*", "src/BroVue/components/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
